tests/golden/valid/minimal-schema.kdl
/- kdl-version 2

schema "https://example.com/schemas/minimal" version="0.1.0" {
  document {
    node "root" required
  }
}
